# grok-hft-data-engineer

./: .gitignore  HFT_DATA_PIPELINES_PLAN.md  LEARNING_STYLE.md  README.md  roadmap_hft_de.md
interview-prep/: mock_scenarios.md  questions_by_topic.md  rigorous_practice_exercises.md
interview-questionnaire/: README.md
interview-questionnaire/core-questions/: concurrency-and-memory.md  market-data-and-books.md  networking-and-protocols.md  oms-hedging.md  performance-observability.md  system-design.md
interview-questionnaire/data-structures/: README.md
interview-questionnaire/hft-terminology/: glossary.md
interview-questionnaire/practice-scenarios/: whiteboard-exercises.md
interview-questionnaire/quick-reference/: cheat-sheet.md
interview-questionnaire/tricky-questions/: advanced-scenarios.md  common-anti-patterns.md  war-stories.md
resources/: curated_reading.md
resume-claims/: INTERVIEW-STRATEGY.md  README.md  exercises.md  interview-cheatsheet.md  war-stories-and-anti-patterns.md
resume-claims/backend-apis/: README.md
resume-claims/cloud-platform/: README.md
resume-claims/databases/: README.md
resume-claims/large-scale-data-processing/: README.md
rust-excellence/: README.md
topics/01_system_architecture_overview/demo_code/toy-pipeline/: Cargo.toml  README.md
topics/01_system_architecture_overview/demo_code/toy-pipeline/src/: main.rs
topics/02_rust_for_ultra_low_latency/demo_code/zero-copy-smallvec/: Cargo.toml  README.md
topics/02_rust_for_ultra_low_latency/demo_code/zero-copy-smallvec/src/: main.rs
(+75 files in other folders)
