[package]
name = "zero-copy-smallvec"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = { version = "1.13", features = ["const_generics", "const_new"] }
bytes = "1"

# This demo shows the difference between:
# - A naive approach that clones Vecs on every update
# - A zero-copy + SmallVec approach suitable for hot path
